--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,3 +30,15 @@ jobs:
     - name: Test with unittest
       run: |
         python test_app.py
+    - name: build docker image
+      run : |
+          docker build -t myapp:latest .
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push Docker image to Docker Hub
+      run: |
+          docker push username/myapp:latest
+   
