--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,11 +33,21 @@ jobs:
     - name: build docker image
       run : |
           docker build -t myapp:latest .
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
+    - name: Docker Login
+  # You may pin to the exact commit or the version.
+  # uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      uses: docker/login-action@v2.1.0
       with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    # Server address of Docker registry. If not set then will default to Docker Hub
+        registry: https://hub.docker.com/
+    # Username used to log against the Docker registry
+        username: ${{ secrets.DOCKER_USERNAME }}
+    # Password or personal access token used to log against the Docker registry
+        password: ${{ secrets.DOCKER_PASSWORD }}
+         # Specifies whether the given registry is ECR (auto, true or false)
+        ecr:  auto
+    # Log out from the Docker registry at the end of a job
+        logout: true
     - name: Push Docker image to Docker Hub
       run: |
           docker push azizjouini/myapp:latest
