--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,8 +38,6 @@ jobs:
   # uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
       uses: docker/login-action@v2.1.0
       with:
-    # Server address of Docker registry. If not set then will default to Docker Hub
-        registry: https://hub.docker.com/
     # Username used to log against the Docker registry
         username: ${{ secrets.DOCKER_USERNAME }}
     # Password or personal access token used to log against the Docker registry
@@ -50,5 +48,5 @@ jobs:
         logout: true
     - name: Push Docker image to Docker Hub
       run: |
-          docker push azizjouini/myapp:latest
+          docker push azizjouini/gh-actions-flask
    
