--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,7 +45,7 @@ jobs:
     # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.DOCKER_PASSWORD }}
          # Specifies whether the given registry is ECR (auto, true or false)
-        ecr:  false
+        ecr:  auto
     # Log out from the Docker registry at the end of a job
         logout: false
     - name: Push Docker image to Docker Hub
