--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
         python test_app.py
     - name: build docker image
       run : |
-          docker build -t myapp:latest .
+          docker build -t azizjouini/myapp:latest .
     - name: Docker Login
   # You may pin to the exact commit or the version.
   # uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
@@ -50,5 +50,5 @@ jobs:
         logout: false
     - name: Push Docker image to Docker Hub
       run: |
-          docker push myapp:latest
+          docker push azizjouini/myapp:latest
    
