--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,63 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  my_app
-  namespace: default
+  name: my-app-deployment
   labels:
-    app:  my_app
+    app: my-app
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: my_app
-  replicas: 1
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      app: my-app
   template:
     metadata:
       labels:
-        app:  my_app
+        app: my-app
     spec:
-      # initContainers:
-        # Init containers are exactly like regular containers, except:
-          # - Init containers always run to completion.
-          # - Each init container must complete successfully before the next one starts.
       containers:
-      - name:  my_app
-        image:  azizjouini/myapp
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
-          limits:
-            cpu: 100m
-            memory: 100Mi
-        livenessProbe:
-          tcpSocket:
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /_status/healthz
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 2
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        env:
-        - name: DB_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: my_app
-              key: DB_HOST
+      - name: my-app
+        image: azizjouini/myapp:latest
         ports:
-        - containerPort:  5000
-          name:  my_app
-        
+        - containerPort: 5000
+        imagePullPolicy: Always
