--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,21 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my_app
-  namespace: default
+  name: my-service
 spec:
   selector:
-    app: my_app
-  type: ClusterIP
-  sessionAffinity: None
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 10800
+    app.kubernetes.io/name: my-app
   ports:
-  - name: my_app
-    protocol: TCP
-    port: 5000
-    targetPort: 5000
-    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
-    # you can specify a value in the `spec.ports[*].nodePort` field.
-    nodePort: 32009
+    - protocol: TCP
+      port: 8080
+      targetPort: 5000
+      nodePort: 30002
+  type: LoadBalancer
+  externalIPs:
+  - 192.168.64.2
+  
