--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: my-app
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: my-app
@@ -19,4 +19,4 @@ spec:
         image: azizjouini/myapp:latest
         ports:
         - containerPort: 5000
-        imagePullPolicy: Always
+        imagePullPolicy: Never
