--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -11,6 +11,6 @@ spec:
       targetPort: 5000
       nodePort: 30002
   type: LoadBalancer
-  externalIPs:
-  - 192.168.64.2
+#  externalIPs:
+#  - 192.168.64.2
   
